==> yanjos-dev/amazon-freertos/vendors/renesas/boards/rx65n-rsk/ports/ota/aws_ota_pal.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "FreeRTOS.h"
#include "aws_iot_ota_agent.h"
#include "iot_crypto.h"
#include "core_pkcs11.h"
#include "aws_ota_codesigner_certificate.h"
#include "aws_ota_agent_config.h"
#include "platform.h"
#include "r_flash_rx_if.h"
#define BOOT_LOADER_LOW_ADDRESS FLASH_CF_BLOCK_13
#define BOOT_LOADER_MIRROR_LOW_ADDRESS FLASH_CF_BLOCK_51
#define BOOT_LOADER_MIRROR_HIGH_ADDRESS FLASH_CF_BLOCK_38
#define BOOT_LOADER_UPDATE_TEMPORARY_AREA_HIGH_ADDRESS FLASH_CF_BLOCK_52
#define BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_SMALL 8
#define BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_MEDIUM 6
#define FLASH_INTERRUPT_PRIORITY configMAX_SYSCALL_INTERRUPT_PRIORITY        /* 0(low) - 15(high) */
#define BOOT_LOADER_UPDATE_TEMPORARY_AREA_LOW_ADDRESS (uint32_t)FLASH_CF_LO_BANK_LO_ADDR
#define BOOT_LOADER_UPDATE_EXECUTE_AREA_LOW_ADDRESS (uint32_t)FLASH_CF_HI_BANK_LO_ADDR
#define BOOT_LOADER_UPDATE_TARGET_BLOCK_NUMBER (uint32_t)(FLASH_NUM_BLOCKS_CF - BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_SMALL - BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_MEDIUM)
#define DUMMY 0
#define BOOT_LOADER_LOW_ADDRESS DUMMY
#define BOOT_LOADER_MIRROR_LOW_ADDRESS DUMMY
#define BOOT_LOADER_MIRROR_HIGH_ADDRESS DUMMY
#define BOOT_LOADER_UPDATE_TEMPORARY_AREA_HIGH_ADDRESS DUMMY
#define BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_SMALL DUMMY
#define BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_MEDIUM DUMMY
#define FLASH_INTERRUPT_PRIORITY DUMMY /* 0(low) - 15(high) */
#define BOOT_LOADER_UPDATE_TEMPORARY_AREA_LOW_ADDRESS DUMMY

OTA_Err_t ota_pal_CreateFileForRx_t( OTA_FileContext_t * const C )
{
    DEFINE_OTA_METHOD_NAME( "ota_pal_CreateFileForRx_t" );
    OTA_LOG_L1("[%s] is called.\r\n", OTA_METHOD_NAME);
    OTA_LOG_L1("Compiled in [%s] [%s].\r\n", __DATE__, __TIME__);
    OTA_Err_t eResult = kOTA_Err_Uninitialized;
    flash_interrupt_config_t cb_func_info;

    if( C != NULL )
    {
        if( C->pucFilePath != NULL )
        {
			/* create task/queue/semaphore for flashing */
			xQueue = xQueueCreate(otaconfigMAX_NUM_BLOCKS_REQUEST, sizeof(PACKET_BLOCK_FOR_QUEUE));
			xTaskCreate(ota_flashing_task, "OTA_FLASHING_TASK", configMINIMAL_STACK_SIZE, NULL, configMAX_PRIORITIES, &xTask);
			xSemaphoreFlashig = xSemaphoreCreateBinary();
			xSemaphoreGive(xSemaphoreFlashig);
			xSemaphoreWriteBlock = xSemaphoreCreateMutex();
			xSemaphoreGive(xSemaphoreWriteBlock);
			fragmented_flash_block_list = NULL;

			R_FLASH_Close();
			if(R_FLASH_Open() == FLASH_SUCCESS)
			{
				cb_func_info.pcallback = ota_header_flashing_callback;
				cb_func_info.int_priority = FLASH_INTERRUPT_PRIORITY;
				R_FLASH_Control(FLASH_CMD_SET_BGO_CALLBACK, (void *)&cb_func_info);
				gs_header_flashing_task = OTA_FLASHING_IN_PROGRESS;
				if (R_FLASH_Erase((flash_block_address_t)BOOT_LOADER_UPDATE_TEMPORARY_AREA_HIGH_ADDRESS, BOOT_LOADER_UPDATE_TARGET_BLOCK_NUMBER) != FLASH_SUCCESS)
				{
					eResult = kOTA_Err_RxFileCreateFailed;
					OTA_LOG_L1( "[%s] ERROR - R_FLASH_Erase() returns error.\r\n", OTA_METHOD_NAME );
				}
				while(OTA_FLASHING_IN_PROGRESS == gs_header_flashing_task);
				R_FLASH_Close();
				R_FLASH_Open();
				cb_func_info.pcallback = ota_flashing_callback;
				cb_func_info.int_priority = FLASH_INTERRUPT_PRIORITY;
				R_FLASH_Control(FLASH_CMD_SET_BGO_CALLBACK, (void *)&cb_func_info);
				load_firmware_control_block.OTA_FileContext = C;
				load_firmware_control_block.total_image_length = 0;
				load_firmware_control_block.eSavedAgentState = eOTA_ImageState_Unknown;
				OTA_LOG_L1( "[%s] Receive file created.\r\n", OTA_METHOD_NAME );
				C->pucFile = (uint8_t *)&load_firmware_control_block;
				eResult = kOTA_Err_None;
			}
			else
			{
				eResult = kOTA_Err_RxFileCreateFailed;
				OTA_LOG_L1( "[%s] ERROR - R_FLASH_Open() returns error.\r\n", OTA_METHOD_NAME );
			}
		}
        else
        {
            eResult = kOTA_Err_RxFileCreateFailed;
            OTA_LOG_L1( "[%s] ERROR - Invalid context provided.\r\n", OTA_METHOD_NAME );
        }
    }
    else
    {
        eResult = kOTA_Err_RxFileCreateFailed;
        OTA_LOG_L1( "[%s] ERROR - Invalid context provided.\r\n", OTA_METHOD_NAME );
    }

    return eResult;
}

OTA_Err_t ota_pal_Abort_t( OTA_FileContext_t * const C )
{
    DEFINE_OTA_METHOD_NAME( "ota_pal_Abort_t" );
    OTA_LOG_L1("[%s] is called.\r\n", OTA_METHOD_NAME);

    OTA_Err_t eResult = kOTA_Err_None;

    if( ota_context_validate(C) == R_OTA_ERR_INVALID_CONTEXT )
    {
        eResult = kOTA_Err_FileClose;
    }

	if (kOTA_Err_None == eResult)
	{
		/* delete task/queue for flashing */
		if (NULL != xTask)
		{
			vTaskDelete(xTask);
			xTask = NULL;
		}
		if (NULL != xQueue)
		{
			vQueueDelete(xQueue);
			xQueue = NULL;
		}
		if (NULL != xSemaphoreFlashig)
		{
			vSemaphoreDelete(xSemaphoreFlashig);
			xSemaphoreFlashig = NULL;
		}
		if (NULL != xSemaphoreWriteBlock)
		{
			vSemaphoreDelete(xSemaphoreWriteBlock);
			xSemaphoreWriteBlock = NULL;
		}

		R_FLASH_Close();
	}

	ota_context_close(C);
    return eResult;
}

int16_t ota_pal_WriteBlock_t( OTA_FileContext_t * const C,
                           uint32_t ulOffset,
                           uint8_t * const pacData,
                           uint32_t ulBlockSize )
{
    int16_t sNumBytesWritten = R_OTA_ERR_QUEUE_SEND_FAIL;
	FLASH_BLOCK flash_block;
    static uint8_t flash_block_array[FLASH_CF_MIN_PGM_SIZE];
	uint8_t *packet_buffer;

    DEFINE_OTA_METHOD_NAME( "ota_pal_WriteBlock_t" );
	OTA_LOG_L1("[%s] is called.\r\n", OTA_METHOD_NAME);

	xSemaphoreTake(xSemaphoreWriteBlock, portMAX_DELAY);

	if ((!(ulOffset % FLASH_CF_MIN_PGM_SIZE)) && (!(ulBlockSize % FLASH_CF_MIN_PGM_SIZE)))
	{
		packet_buffer = pvPortMalloc(ulBlockSize);
	    memcpy(packet_buffer, pacData, ulBlockSize);
	    packet_block_for_queue1.p_packet = packet_buffer;
	    packet_block_for_queue1.ulOffset = ulOffset;
	    packet_block_for_queue1.length = ulBlockSize;
		if(xQueueSend(xQueue, &packet_block_for_queue1, NULL) == pdPASS)
		{
			sNumBytesWritten = ( int16_t ) ulBlockSize;
		}
		else
		{
			vPortFree(packet_block_for_queue1.p_packet);
			OTA_LOG_L1("OTA flashing queue send error.\r\n");
			sNumBytesWritten = R_OTA_ERR_QUEUE_SEND_FAIL;
		}
	}
	else
	{
		flash_block.binary = flash_block_array;

		fragmented_flash_block_list = fragmented_flash_block_list_insert(fragmented_flash_block_list, ulOffset, pacData, ulBlockSize);

		if (fragmented_flash_block_list != NULL)
		{
			while(1)
			{
				fragmented_flash_block_list = fragmented_flash_block_list_assemble(fragmented_flash_block_list, &flash_block);
				if (flash_block.binary != NULL)
				{
					packet_buffer = pvPortMalloc(flash_block.length);
				    memcpy(packet_buffer, flash_block.binary, flash_block.length);
				    packet_block_for_queue1.p_packet = packet_buffer;
				    packet_block_for_queue1.ulOffset = flash_block.offset;
				    packet_block_for_queue1.length   = flash_block.length;
					if(xQueueSend(xQueue, &packet_block_for_queue1, NULL) != pdPASS)
					{
						vPortFree(packet_block_for_queue1.p_packet);
						OTA_LOG_L1("OTA flashing queue send error.\r\n");
						sNumBytesWritten = R_OTA_ERR_QUEUE_SEND_FAIL;
						break;
					}
				}
				else
				{
					sNumBytesWritten = ( int16_t ) ulBlockSize;
					break;
				}
			}
			/*----------- finalize phase ----------*/
			fragmented_flash_block_list_print(fragmented_flash_block_list);
		}
		else
		{
			sNumBytesWritten = ( int16_t ) ulBlockSize;
		}
	}

	xSemaphoreGive(xSemaphoreWriteBlock);

	return sNumBytesWritten;
}

OTA_Err_t ota_pal_CloseFile_t( OTA_FileContext_t * const C )
{
	OTA_Err_t eResult = kOTA_Err_None;

    DEFINE_OTA_METHOD_NAME( "ota_pal_CloseFile_t" );

    if( ota_context_validate(C) == R_OTA_ERR_INVALID_CONTEXT )
    {
        eResult = kOTA_Err_FileClose;
    }

    if( C->pxSignature != NULL )
    {
		eResult = prvPAL_CheckFileSignature(C);
	}
	else
    {
        eResult = kOTA_Err_SignatureCheckFailed;
    }

	if (kOTA_Err_None == eResult)
	{
		/* Update the user firmware header. */
		if (ota_context_update_user_firmware_header(C) == R_OTA_ERR_NONE)
		{
			OTA_LOG_L1( "[%s] User firmware header updated.\r\n", OTA_METHOD_NAME );
		}
		else
		{
			OTA_LOG_L1( "[%s] ERROR: Failed to update the image header.\r\n", OTA_METHOD_NAME );
			eResult = kOTA_Err_FileClose;
		}
		/* delete task/queue for flashing */
		if (NULL != xTask)
		{
			vTaskDelete(xTask);
			xTask = NULL;
		}
		if (NULL != xQueue)
		{
			do
			{
				if (errQUEUE_FULL == xQueueReceive(xQueue, &packet_block_for_queue2, 0))
				{
					break;
				}
				else
				{
					vPortFree(packet_block_for_queue2.p_packet);
				}
			}
			while(1);
			vQueueDelete(xQueue);
			xQueue = NULL;
		}
		if (NULL != xSemaphoreFlashig)
		{
			vSemaphoreDelete(xSemaphoreFlashig);
			xSemaphoreFlashig = NULL;
		}
		if (NULL != xSemaphoreWriteBlock)
		{
			vSemaphoreDelete(xSemaphoreWriteBlock);
			xSemaphoreWriteBlock = NULL;
		}

		R_FLASH_Close();
	}
	else
	{
		load_firmware_control_block.eSavedAgentState = eOTA_ImageState_Rejected;
	}

	ota_context_close(C);
	return eResult;
}

static OTA_Err_t prvPAL_CheckFileSignature( OTA_FileContext_t * const C )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_CheckFileSignature" );

    OTA_Err_t eResult;
    uint32_t ulSignerCertSize;
    void * pvSigVerifyContext;
    uint8_t * pucSignerCert = NULL;
	uint32_t flash_aligned_address = 0;
	uint8_t assembled_flash_buffer[FLASH_CF_MIN_PGM_SIZE];
    flash_err_t flash_err;
    flash_interrupt_config_t cb_func_info;

	if (fragmented_flash_block_list != NULL)
	{
		FRAGMENTED_FLASH_BLOCK_LIST *tmp = fragmented_flash_block_list;
		do
		{
			/* Read one page from flash memory. */
			flash_aligned_address = ((tmp->content.offset & OTA_FLASH_MIN_PGM_SIZE_MASK) + BOOT_LOADER_UPDATE_TEMPORARY_AREA_LOW_ADDRESS + BOOT_LOADER_USER_FIRMWARE_HEADER_LENGTH);
			memcpy((uint8_t *)assembled_flash_buffer, (uint8_t *)flash_aligned_address, FLASH_CF_MIN_PGM_SIZE);
			/* Replace length bytes from offset. */
			memcpy(&assembled_flash_buffer[tmp->content.offset], tmp->content.binary, tmp->content.length);
			/* Flashing memory. */
			xSemaphoreTake(xSemaphoreFlashig, portMAX_DELAY);
			R_FLASH_Close();
			R_FLASH_Open();
			cb_func_info.pcallback = ota_header_flashing_callback;
			cb_func_info.int_priority = FLASH_INTERRUPT_PRIORITY;
			R_FLASH_Control(FLASH_CMD_SET_BGO_CALLBACK, (void *)&cb_func_info);
			gs_header_flashing_task = OTA_FLASHING_IN_PROGRESS;
			flash_err = R_FLASH_Write((uint32_t)assembled_flash_buffer, (uint32_t)flash_aligned_address, FLASH_CF_MIN_PGM_SIZE);
			if(flash_err != FLASH_SUCCESS)
			{
				nop();
			}
			while (OTA_FLASHING_IN_PROGRESS == gs_header_flashing_task);
			xSemaphoreGive(xSemaphoreFlashig);
			load_firmware_control_block.total_image_length += tmp->content.length;
			tmp = fragmented_flash_block_list_delete(tmp, tmp->content.offset);
		}
		while(tmp != NULL);
	}

    /* Verify an ECDSA-SHA256 signature. */
    if( CRYPTO_SignatureVerificationStart( &pvSigVerifyContext, cryptoASYMMETRIC_ALGORITHM_ECDSA,
                                           cryptoHASH_ALGORITHM_SHA256 ) == pdFALSE )
    {
        return kOTA_Err_SignatureCheckFailed;
    }
    else
    {
        OTA_LOG_L1( "[%s] Started %s signature verification, file: %s\r\n", OTA_METHOD_NAME,
                    cOTA_JSON_FileSignatureKey, ( const char * ) C->pucCertFilepath );
        pucSignerCert = prvPAL_ReadAndAssumeCertificate( C->pucCertFilepath, &ulSignerCertSize );

        if( pucSignerCert == NULL )
        {
            eResult = kOTA_Err_BadSignerCert;
        }
        else
        {
            CRYPTO_SignatureVerificationUpdate( pvSigVerifyContext,
                                                (const uint8_t*)BOOT_LOADER_UPDATE_TEMPORARY_AREA_LOW_ADDRESS + BOOT_LOADER_USER_FIRMWARE_HEADER_LENGTH,
                                                load_firmware_control_block.total_image_length);

            if( CRYPTO_SignatureVerificationFinal( pvSigVerifyContext, ( char * ) pucSignerCert, ulSignerCertSize,
                                                   C->pxSignature->ucData, C->pxSignature->usSize ) == pdFALSE )
            {
                OTA_LOG_L1( "[%s] ERROR: Finished %s signature verification, but signature verification failed\r\n", OTA_METHOD_NAME,
                    cOTA_JSON_FileSignatureKey );
                eResult = kOTA_Err_SignatureCheckFailed;
            }
            else
            {
                OTA_LOG_L1( "[%s] PASS: Finished %s signature verification, signature verification passed\r\n", OTA_METHOD_NAME,
                    cOTA_JSON_FileSignatureKey );
                eResult = kOTA_Err_None;
            }
        }
    }

    /* Free the signer certificate that we now own after prvPAL_ReadAndAssumeCertificate(). */
    if( pucSignerCert != NULL )
    {
        vPortFree( pucSignerCert );
    }

    return eResult;
}

static uint8_t * prvPAL_ReadAndAssumeCertificate( const uint8_t * const pucCertName,
                                                  uint32_t * const ulSignerCertSize )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_ReadAndAssumeCertificate" );

    uint8_t * pucCertData;
    uint32_t ulCertSize;
    uint8_t * pucSignerCert = NULL;
    CK_RV xResult;

    xResult = prvGetCertificate( ( const char * ) pucCertName, &pucSignerCert, ulSignerCertSize );

    if( ( xResult == CKR_OK ) && ( pucSignerCert != NULL ) )
    {
        OTA_LOG_L1( "[%s] Using cert with label: %s OK\r\n", OTA_METHOD_NAME, ( const char * ) pucCertName );
    }
    else
    {
        OTA_LOG_L1( "[%s] No such certificate file: %s. Using aws_ota_codesigner_certificate.h.\r\n", OTA_METHOD_NAME,
                    ( const char * ) pucCertName );

        /* Allocate memory for the signer certificate plus a terminating zero so we can copy it and return to the caller. */
        ulCertSize = sizeof( signingcredentialSIGNING_CERTIFICATE_PEM );
        pucSignerCert = pvPortMalloc( ulCertSize + 1 );                       /*lint !e9029 !e9079 !e838 malloc proto requires void*. */
        pucCertData = ( uint8_t * ) signingcredentialSIGNING_CERTIFICATE_PEM; /*lint !e9005 we don't modify the cert but it could be set by PKCS11 so it's not const. */

        if( pucSignerCert != NULL )
        {
            memcpy( pucSignerCert, pucCertData, ulCertSize );
            /* The crypto code requires the terminating zero to be part of the length so add 1 to the size. */
            pucSignerCert[ ulCertSize ] = 0U;
            *ulSignerCertSize = ulCertSize + 1U;
        }
        else
        {
            OTA_LOG_L1( "[%s] Error: No memory for certificate of size %d!\r\n", OTA_METHOD_NAME, ulCertSize );
        }
    }

    return pucSignerCert;
}

OTA_Err_t ota_pal_ActivateNewImage_t( OTA_FileContext_t const C )
{
    DEFINE_OTA_METHOD_NAME("ota_pal_ActivateNewImage_t");
    ( void ) C;

    OTA_LOG_L1( "[%s] Changing the Startup Bank\r\n", OTA_METHOD_NAME );

    /* reset for self testing */
	vTaskDelay(5000);
	ota_pal_ResetDevice_t();	/* no return from this function */

    return kOTA_Err_None;
}
