==> yanjos-dev/amazon-freertos/vendors/espressif/boards/esp32/ports/ota/aws_ota_pal.c <==
#include <stdio.h>
#include <stdint.h>
#include <string.h>
#include "aws_iot_ota_agent.h"
#include "aws_iot_ota_pal.h"
#include "aws_iot_ota_interface.h"
#include "aws_ota_agent_config.h"
#include "types/iot_network_types.h"
#include "aws_iot_network_config.h"
#include "iot_crypto.h"
#include "core_pkcs11.h"
#include "esp_system.h"
#include "esp_log.h"
#include "soc/rtc_cntl_reg.h"
#include "soc/rtc_wdt.h"
#include "aws_ota_codesigner_certificate.h"
#include "esp_partition.h"
#include "esp_spi_flash.h"
#include "esp_image_format.h"
#include "esp_ota_ops.h"
#include "aws_esp_ota_ops.h"
#include "mbedtls/asn1.h"
#include "mbedtls/bignum.h"
#include "mbedtls/base64.h"
#define kOTA_HalfSecondDelay    pdMS_TO_TICKS( 500UL )
#define ECDSA_INTEGER_LEN       32
#define ECDSA_SIG_SIZE          80

OTA_Err_t ota_pal_Abort_t( OTA_FileContext_t * const C )
{
    OTA_Err_t ota_ret = kOTA_Err_FileAbort;

    if( _esp_ota_ctx_validate( C ) )
    {
        _esp_ota_ctx_close( C );
        ota_ret = kOTA_Err_None;
    }
    else if( C && ( C->pucFile == NULL ) )
    {
        ota_ret = kOTA_Err_None;
    }

    return ota_ret;
}

OTA_Err_t ota_pal_CreateFileForRx_t( OTA_FileContext_t * const C )
{
    if( ( NULL == C ) || ( NULL == C->pucFilePath ) )
    {
        return kOTA_Err_RxFileCreateFailed;
    }

    const esp_partition_t * update_partition = aws_esp_ota_get_next_update_partition( NULL );

    if( update_partition == NULL )
    {
        ESP_LOGE( TAG, "failed to find update partition" );
        return kOTA_Err_RxFileCreateFailed;
    }

    ESP_LOGI( TAG, "Writing to partition subtype %d at offset 0x%x",
              update_partition->subtype, update_partition->address );

    esp_ota_handle_t update_handle;
    esp_err_t err = aws_esp_ota_begin( update_partition, OTA_SIZE_UNKNOWN, &update_handle );

    if( err != ESP_OK )
    {
        ESP_LOGE( TAG, "aws_esp_ota_begin failed (%d)", err );
        return kOTA_Err_RxFileCreateFailed;
    }

    ota_ctx.cur_ota = C;
    ota_ctx.update_partition = update_partition;
    ota_ctx.update_handle = update_handle;

    C->pucFile = ( uint8_t * ) &ota_ctx;
    ota_ctx.data_write_len = 0;
    ota_ctx.valid_image = false;

    ESP_LOGI( TAG, "aws_esp_ota_begin succeeded" );

    return kOTA_Err_None;
}

u8 * prvPAL_ReadAndAssumeCertificate( const u8 * const pucCertName,
                                      uint32_t * const ulSignerCertSize )
{
    uint8_t * pucCertData;
    uint32_t ulCertSize;
    uint8_t * pucSignerCert = NULL;
    CK_RV xResult;

    xResult = prvGetCertificate( ( const char * ) pucCertName, &pucSignerCert, ulSignerCertSize );

    if( ( xResult == CKR_OK ) && ( pucSignerCert != NULL ) )
    {
        ESP_LOGI( TAG, "Using cert with label: %s OK\r\n", ( const char * ) pucCertName );
    }
    else
    {
        ESP_LOGI( TAG, "No such certificate file: %s. Using aws_ota_codesigner_certificate.h.\r\n",
                  ( const char * ) pucCertName );

        /* Allocate memory for the signer certificate plus a terminating zero so we can copy it and return to the caller. */
        ulCertSize = sizeof( signingcredentialSIGNING_CERTIFICATE_PEM );
        pucSignerCert = pvPortMalloc( ulCertSize );                           /*lint !e9029 !e9079 !e838 malloc proto requires void*. */
        pucCertData = ( uint8_t * ) signingcredentialSIGNING_CERTIFICATE_PEM; /*lint !e9005 we don't modify the cert but it could be set by PKCS11 so it's not const. */

        if( pucSignerCert != NULL )
        {
            memcpy( pucSignerCert, pucCertData, ulCertSize );
            *ulSignerCertSize = ulCertSize;
        }
        else
        {
            ESP_LOGE( TAG, "Error: No memory for certificate in prvPAL_ReadAndAssumeCertificate!\r\n" );
        }
    }

    return pucSignerCert;
}

OTA_Err_t prvPAL_CheckFileSignature( OTA_FileContext_t * const C )
{
    OTA_Err_t result;
    uint32_t ulSignerCertSize;
    void * pvSigVerifyContext;
    u8 * pucSignerCert = 0;
    static spi_flash_mmap_memory_t ota_data_map;
    const void * buf = NULL;

    /* Verify an ECDSA-SHA256 signature. */
    if( CRYPTO_SignatureVerificationStart( &pvSigVerifyContext, cryptoASYMMETRIC_ALGORITHM_ECDSA,
                                           cryptoHASH_ALGORITHM_SHA256 ) == pdFALSE )
    {
        ESP_LOGE( TAG, "signature verification start failed" );
        return kOTA_Err_SignatureCheckFailed;
    }

    pucSignerCert = prvPAL_ReadAndAssumeCertificate( ( const u8 * const ) C->pucCertFilepath, &ulSignerCertSize );

    if( pucSignerCert == NULL )
    {
        ESP_LOGE( TAG, "cert read failed" );
        return kOTA_Err_BadSignerCert;
    }

    esp_err_t ret = esp_partition_mmap( ota_ctx.update_partition, 0, ota_ctx.data_write_len,
                                        SPI_FLASH_MMAP_DATA, &buf, &ota_data_map );

    if( ret != ESP_OK )
    {
        ESP_LOGE( TAG, "partition mmap failed %d", ret );
        result = kOTA_Err_SignatureCheckFailed;
        goto end;
    }

    CRYPTO_SignatureVerificationUpdate( pvSigVerifyContext, buf, ota_ctx.data_write_len );
    spi_flash_munmap( ota_data_map );

    if( CRYPTO_SignatureVerificationFinal( pvSigVerifyContext, ( char * ) pucSignerCert, ulSignerCertSize,
                                           C->pxSignature->ucData, C->pxSignature->usSize ) == pdFALSE )
    {
        ESP_LOGE( TAG, "signature verification failed" );
        result = kOTA_Err_SignatureCheckFailed;
    }
    else
    {
        result = kOTA_Err_None;
    }

end:

    /* Free the signer certificate that we now own after prvReadAndAssumeCertificate(). */
    if( pucSignerCert != NULL )
    {
        vPortFree( pucSignerCert );
    }

    return result;
}

OTA_Err_t ota_pal_CloseFile_t( OTA_FileContext_t * const C )
{
    OTA_Err_t result = kOTA_Err_None;

    if( !_esp_ota_ctx_validate( C ) )
    {
        return kOTA_Err_FileClose;
    }

    if( C->pxSignature == NULL )
    {
        ESP_LOGE( TAG, "Image Signature not found" );
        _esp_ota_ctx_clear( &ota_ctx );
        result = kOTA_Err_SignatureCheckFailed;
    }
    else if( ota_ctx.data_write_len == 0 )
    {
        ESP_LOGE( TAG, "No data written to partition" );
        result = kOTA_Err_SignatureCheckFailed;
    }
    else
    {
        /* Verify the file signature, close the file and return the signature verification result. */
        result = prvPAL_CheckFileSignature( C );

        if( result != kOTA_Err_None )
        {
            esp_partition_erase_range( ota_ctx.update_partition, 0, ota_ctx.update_partition->size );
        }
        else
        {
            /* Write ASN1 decoded signature at the end of firmware image for bootloader to validate during bootup */
            esp_sec_boot_sig_t * sec_boot_sig = ( esp_sec_boot_sig_t * ) malloc( sizeof( esp_sec_boot_sig_t ) );

            if( sec_boot_sig != NULL )
            {
                memset( sec_boot_sig->sec_ver, 0x00, sizeof( sec_boot_sig->sec_ver ) );
                memset( sec_boot_sig->pad, 0xFF, sizeof( sec_boot_sig->pad ) );
                result = asn1_to_raw_ecdsa( C->pxSignature->ucData, C->pxSignature->usSize, sec_boot_sig->raw_ecdsa_sig );

                if( result == kOTA_Err_None )
                {
                    esp_err_t ret = aws_esp_ota_write( ota_ctx.update_handle, sec_boot_sig, ota_ctx.data_write_len, ECDSA_SIG_SIZE );

                    if( ret != ESP_OK )
                    {
                        return kOTA_Err_FileClose;
                    }

                    ota_ctx.data_write_len += ECDSA_SIG_SIZE;
                }

                free( sec_boot_sig );
                ota_ctx.valid_image = true;
            }
            else
            {
                result = kOTA_Err_SignatureCheckFailed;
            }
        }
    }

    return result;
}

OTA_Err_t ota_pal_ActivateNewImage_t( OTA_FileContext_t const C )
{
    ( void ) C;
    if( ota_ctx.cur_ota != NULL )
    {
        if( aws_esp_ota_end( ota_ctx.update_handle ) != ESP_OK )
        {
            ESP_LOGE( TAG, "aws_esp_ota_end failed!" );
            esp_partition_erase_range( ota_ctx.update_partition, 0, ota_ctx.update_partition->size );
            prvPAL_ResetDevice();
        }

        esp_err_t err = aws_esp_ota_set_boot_partition( ota_ctx.update_partition );

        if( err != ESP_OK )
        {
            ESP_LOGE( TAG, "aws_esp_ota_set_boot_partition failed (%d)!", err );
            esp_partition_erase_range( ota_ctx.update_partition, 0, ota_ctx.update_partition->size );
            _esp_ota_ctx_clear( &ota_ctx );
        }

        prvPAL_ResetDevice();
    }

    _esp_ota_ctx_clear( &ota_ctx );
    prvPAL_ResetDevice();
    return kOTA_Err_None;
}

int16_t ota_pal_WriteBlock_t( OTA_FileContext_t * const C,
                           uint32_t iOffset,
                           uint8_t * const pacData,
                           uint32_t iBlockSize )
{
    if( _esp_ota_ctx_validate( C ) )
    {
        esp_err_t ret = aws_esp_ota_write( ota_ctx.update_handle, pacData, iOffset, iBlockSize );

        if( ret != ESP_OK )
        {
            ESP_LOGE( TAG, "Couldn't flash at the offset %d", iOffset );
            return -1;
        }

        ota_ctx.data_write_len += iBlockSize;
    }
    else
    {
        ESP_LOGI( TAG, "Invalid OTA Context" );
        return -1;
    }

    return iBlockSize;
}
